feat: weekly and monthly sales and stock
