# app/domains/services/sales/sales.router.js
@@ -5,8 +5,10 @@ const verifyToken = require('../../../middlewares/auth/jwt/jwt.verify');
 
 const salesController = require('./sales.controller');
 
-salesRouter.get('/get', verifyToken, salesController.get);
-salesRouter.get('/get/:date', verifyToken, salesController.get);
+salesRouter.get('/daily', verifyToken, salesController.daily);
+salesRouter.get('/daily/:date', verifyToken, salesController.daily);
+salesRouter.get('/weekly', verifyToken, salesController.weekly);
+salesRouter.get('/monthly', verifyToken, salesController.monthly);
 salesRouter.put('/add', verifyToken, salesController.add);
 
 module.exports = salesRouter;
