# app/domains/services/stock/stock.controller.js
@@ -1,13 +1,15 @@
 const Service = require('../services.model').Service;
 
-const get = async (req, res) => {
-    try {
-        let date = req.params.date;
-        if (!date) {
-            const d = new Date();
-            date = `${d.getFullYear()}-${("0" + (d.getMonth()+1).toString()).slice(-2)}-${("0" + d.getDate().toString()).slice(-2)}`;
-        }
+const getDate = (d) => {
+    if (!d) {
+        d = new Date();
+    }
+    return `${d.getFullYear()}-${("0" + (d.getMonth()+1).toString()).slice(-2)}-${("0" + d.getDate().toString()).slice(-2)}`;
+}
 
+const daily = async (req, res) => {
+    try {
+        const date = getDate();
         const getService = await Service.findOne({ email: req.user.email });
         if (!getService) {
             return res.status(400).json({
@@ -24,8 +26,6 @@ const get = async (req, res) => {
                 items: [],
                 date: date
             }
-            getService.dailystock.push(newstock);
-            await getService.save();
             return res.status(200).json({
                 status: 'success',
                 message: 'Successfully read daily stock data for ' + date,
@@ -51,13 +51,9 @@ const get = async (req, res) => {
     }
 }
 
-const add = async (req, res) => {
+const weekly = async (req, res) => {
     try {
-        const newstock = req.body || [];
-
-        const d = new Date();
-        const date = `${d.getFullYear()}-${("0" + (d.getMonth()+1).toString()).slice(-2)}-${("0" + d.getDate().toString()).slice(-2)}`;
-
+        const date = getDate();
         const getService = await Service.findOne({ email: req.user.email });
         if (!getService) {
             return res.status(400).json({
@@ -67,43 +63,29 @@ const add = async (req, res) => {
             });
         }
 
-        const datedstockdata = getService.dailystock.find(ds => ds.date === date);
+        let response = [];
 
-        if (!datedstockdata) {
-            const newstock = {
-                items: [],
-                date: date
-            }
-            getService.dailystock.push(newstock);
-        }
-
-        for (const ns of newstock) {
-            let item = datedstockdata.items.find(i => i.name === ns.name);
-        
-            if (item) {
-                item.counts += ns.counts;
+        for (let i = 0; i < 7; i++) {
+            let selecteddate = getDate(new Date(new Date(date) - (i * 24 * 60 * 60 * 1000)));
+            let datedstockdata = getService.dailystock.find(ds => ds.date === selecteddate);
+            if (!datedstockdata) {
+                const stockplaceholder = {
+                    items: [],
+                    date: selecteddate
+                }
+                response.push(stockplaceholder);
             } else {
-                datedstockdata.items.push({
-                    name: ns.name,
-                    price: ns.price,
-                    counts: ns.counts
-                });
+                datedstockdata = datedstockdata.toObject();
+                delete datedstockdata._id;
+                response.push(datedstockdata);
             }
-        
-            getService.newstock.push({
-                name: ns.name,
-                counts: ns.counts,
-                time: new Date()
-            });
         }
-        
-        await getService.save();
 
         return res.status(200).json({
             status: 'success',
-            message: 'Successfully add new stock data for ' + date,
+            message: 'Successfully read weekly stock data for ' + date,
             data: {
-                newstock: newstock
+                weeklyStock: response
             }
         });
     } catch (err) {
@@ -116,7 +98,129 @@ const add = async (req, res) => {
     }
 }
 
+const monthly = async (req, res) => {
+    try {
+        const date = getDate();
+        const getService = await Service.findOne({ email: req.user.email });
+        if (!getService) {
+            return res.status(400).json({
+                status: 'error',
+                message: "User not found or not registered yet",
+                data: {}
+            });
+        }
+
+        let response = [];
+
+        for (let i = 0; i < 30; i++) {
+            let selecteddate = getDate(new Date(new Date(date) - (i * 24 * 60 * 60 * 1000)));
+            let datedstockdata = getService.dailystock.find(ds => ds.date === selecteddate);
+            if (!datedstockdata) {
+                const stockplaceholder = {
+                    items: [],
+                    date: selecteddate
+                }
+                response.push(stockplaceholder);
+            } else {
+                datedstockdata = datedstockdata.toObject();
+                delete datedstockdata._id;
+                response.push(datedstockdata);
+            }
+        }
+
+        return res.status(200).json({
+            status: 'success',
+            message: 'Successfully read monthly stock data for ' + date,
+            data: {
+                monthlyStock: response
+            }
+        });
+    } catch (err) {
+        console.error(err);
+        return res.status(400).json({
+            status: 'error',
+            message: process.env.DEBUG ? err.message : "Bad Request",
+            data: {}
+        });
+    }
+}
+
+const add = async (req, res) => {
+    try {
+        const newstock = req.body || [];
+
+        const date = getDate();
+
+        if (newstock.length > 0) {
+            const getService = await Service.findOne({ email: req.user.email });
+            if (!getService) {
+                return res.status(400).json({
+                    status: 'error',
+                    message: "User not found or not registered yet",
+                    data: {}
+                });
+            }
+
+            let datedstockdata = getService.dailystock.find(ds => ds.date === date);
+
+            if (!datedstockdata) {
+                const newstock = {
+                    items: [],
+                    date: date
+                }
+                getService.dailystock.push(newstock);
+                datedstockdata = getService.dailystock.find(ds => ds.date === date);
+            }
+
+            for (const ns of newstock) {
+                let item = datedstockdata.items.find(i => i.name === ns.name);
+            
+                if (item) {
+                    item.counts += ns.counts;
+                } else {
+                    datedstockdata.items.push({
+                        name: ns.name,
+                        price: ns.price,
+                        counts: ns.counts
+                    });
+                }
+            
+                getService.newstock.push({
+                    name: ns.name,
+                    counts: ns.counts,
+                    time: new Date()
+                });
+            }
+            
+            await getService.save();
+
+            return res.status(200).json({
+                status: 'success',
+                message: 'Successfully add new stock data for ' + date,
+                data: {
+                    newstock: newstock
+                }
+            });
+        } else {
+            return res.status(200).json({
+                status: 'success',
+                message: 'No changes were made',
+                data: {}
+            });
+        }
+    } catch (err) {
+        console.error(err);
+        return res.status(400).json({
+            status: 'error',
+            message: process.env.DEBUG ? err.message : "Bad Request",
+            data: {}
+        });
+    }
+}
+
 module.exports = {
-    get,
+    daily,
+    weekly,
+    monthly,
     add
 };
