# app/domains/services/stock/stock.router.js
@@ -5,8 +5,10 @@ const verifyToken = require('../../../middlewares/auth/jwt/jwt.verify');
 
 const stockController = require('./stock.controller');
 
-stockRouter.get('/get', verifyToken, stockController.get);
-stockRouter.get('/get/:date', verifyToken, stockController.get);
+stockRouter.get('/daily', verifyToken, stockController.daily);
+stockRouter.get('/daily/:date', verifyToken, stockController.daily);
+stockRouter.get('/weekly', verifyToken, stockController.weekly);
+stockRouter.get('/monthly', verifyToken, stockController.monthly);
 stockRouter.put('/add', verifyToken, stockController.add);
 
 module.exports = stockRouter;
